--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "graphbrainz": "^8.1.0",
     "lodash": "^4.17.15",
     "node-internet-radio": "^0.2.0",
     "socket.io": "^2.3.0"
