--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.15",
     "node-internet-radio": "^0.2.0",
     "socket.io": "^3.1.2",
+    "socket.io-redis": "^6.1.0",
     "xstate": "^4.9.1"
   }
 }
