--- a/package.json
+++ b/package.json
@@ -6,15 +6,28 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=18.13.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphbrainz": "^8.1.0",
     "lodash": "^4.17.15",
+    "lodash-es": "^4.17.21",
     "node-internet-radio": "^0.2.0",
+    "qs": "^6.11.0",
+    "querystring": "^0.2.1",
+    "redis": "^4.6.4",
+    "request": "^2.88.2",
     "socket.io": "^3.1.2",
     "socket.io-redis": "^6.1.0",
+    "spotify-web-api-node": "^5.0.2",
     "xstate": "^4.9.1"
   }
 }
