--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node dist/server.js",
+    "build": "tsc --build tsconfig.json",
+    "dev": "nodemon server.ts",
+    "postinstall": "yarn run build"
   },
   "engines": {
     "npm": ">=8.0.0 <9.0.0",
@@ -13,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.1.0",
     "axios": "^1.3.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -26,8 +30,20 @@
     "redis": "^4.6.4",
     "request": "^2.88.2",
     "socket.io": "^3.1.2",
-    "socket.io-redis": "^6.1.0",
     "spotify-web-api-node": "^5.0.2",
+    "ts-node": "^10.9.1",
     "xstate": "^4.9.1"
+  },
+  "devDependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.192",
+    "@types/redis": "^4.0.11",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-redis": "^3.0.0",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.3"
   }
 }
