--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc --build tsconfig.json",
-    "dev": "nodemon server.ts",
-    "postinstall": "yarn run build"
+    "develop": "nodemon server.ts",
+    "postinstall": "yarn run build",
+    "test": "jest --watch"
   },
   "engines": {
     "npm": ">=8.0.0 <9.0.0",
@@ -38,12 +39,15 @@
     "@emoji-mart/data": "^1.1.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.192",
     "@types/redis": "^4.0.11",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-redis": "^3.0.0",
     "@types/spotify-web-api-node": "^5.0.7",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
