--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphbrainz": "^9.0.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "mustache": "^4.2.0",
     "node-internet-radio": "^0.2.1",
     "qs": "^6.11.1",
     "querystring": "^0.2.1",
@@ -41,6 +42,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.192",
+    "@types/mustache": "^4.2.2",
     "@types/redis": "^4.0.11",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-redis": "^3.0.0",
