--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "rm -rf dist && swc ./src -d dist",
     "start": "node dist/server.js",
-    "build": "tsc --build tsconfig.json",
     "develop": "nodemon server.ts",
     "postinstall": "yarn run build",
     "test": "jest --watch"
@@ -17,8 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@socket.io/redis-adapter": "^8.1.0",
-    "axios": "^1.3.5",
+    "@socket.io/redis-adapter": "^8.2.1",
+    "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -27,21 +27,26 @@
     "lodash-es": "^4.17.21",
     "mustache": "^4.2.0",
     "node-internet-radio": "^0.2.1",
-    "qs": "^6.11.1",
+    "qs": "^6.11.2",
     "querystring": "^0.2.1",
-    "redis": "^4.6.5",
+    "redis": "^4.6.7",
     "request": "^2.88.2",
-    "socket.io": "^4.6.1",
+    "socket.io": "^4.6.2",
+    "socket.io-adapter": "^2.5.2",
     "spotify-web-api-node": "^5.0.2",
     "ts-node": "^10.9.1",
-    "xstate": "^4.37.1"
+    "typescript": "^5.1.3",
+    "xstate": "^4.37.2"
   },
   "devDependencies": {
     "@emoji-mart/data": "^1.1.2",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.66",
+    "@tsconfig/node18": "^2.0.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.0",
-    "@types/lodash": "^4.14.192",
+    "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.195",
     "@types/mustache": "^4.2.2",
     "@types/redis": "^4.0.11",
     "@types/socket.io": "^3.0.2",
@@ -49,7 +54,10 @@
     "@types/spotify-web-api-node": "^5.0.7",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "ts-jest": "^29.1.0"
+  },
+  "volta": {
+    "node": "18.12.1",
+    "yarn": "3.6.0-git.20230603.hash-3c8237cb"
   }
 }
