--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@swc/core": "^1.3.66",
     "@tsconfig/node18": "^2.0.1",
     "@types/cookie-parser": "^1.4.3",
+    "@types/eslint": "^8",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.195",
@@ -52,6 +53,9 @@
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-redis": "^3.0.0",
     "@types/spotify-web-api-node": "^5.0.7",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint": "^8.43.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0"
