switches to esbuild

--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,12 @@ yarn-error.log
 .google/**
 
 
-.yarn/*
-!.yarn/releases
-!.yarn/plugins
 .pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 dist
