--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && swc ./src -d dist",
+    "build": "rm -rf dist && esbuild ./src/server.ts --bundle --outdir=dist --target=es2022 --platform=node",
     "start": "node dist/server.js",
+    "start:docker": "yarn build && yarn start",
     "develop": "nodemon server.ts",
     "postinstall": "yarn run build",
     "test": "jest --watch"
   },
   "engines": {
     "npm": ">=8.0.0 <9.0.0",
-    "node": ">=18.13.0"
+    "node": ">=18.12.0"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +22,8 @@
     "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "esbuild": "^0.18.5",
     "express": "^4.18.2",
-    "graphbrainz": "^9.0.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mustache": "^4.2.0",
@@ -30,18 +31,14 @@
     "qs": "^6.11.2",
     "querystring": "^0.2.1",
     "redis": "^4.6.7",
-    "request": "^2.88.2",
     "socket.io": "^4.6.2",
     "socket.io-adapter": "^2.5.2",
     "spotify-web-api-node": "^5.0.2",
-    "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "xstate": "^4.37.2"
   },
   "devDependencies": {
     "@emoji-mart/data": "^1.1.2",
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.66",
     "@tsconfig/node18": "^2.0.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/eslint": "^8",
