--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,9 @@
 # .yarnrc.yml
 
-pnpMode: "loose"
-pnpFallbackMode: "all"
+# pnpMode: "loose"
+# pnpFallbackMode: "all"
+nodeLinker: node-modules
+supportedArchitectures:
+  os:
+    - "current"
+    - "linux"
