--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - 3000:3000
       - 9229:9229 # debugger port
     volumes:
-      - .:/usr/src/app
-      # - /usr/src/app/node_modules
+      - ./:/usr/src/app
+      - /usr/src/app/node_modules
     command: yarn start:docker
     environment:
       PORT: 3000
