--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && esbuild ./src/server.ts --bundle --outdir=dist --target=es2022 --platform=node",
+    "build": "rm -rf dist && esbuild ./src/server.ts --bundle --outdir=dist --target=es2022 --platform=node --sourcemap",
+    "build:dev": "rm -rf dist && esbuild ./src/server.ts --bundle --outdir=dist --target=es2022 --platform=node --watch",
     "start": "node dist/server.js",
-    "start:docker": "yarn build && yarn start",
-    "develop": "nodemon server.ts",
+    "start:docker": "yarn build && node --inspect=0.0.0.0 dist/server.js",
     "postinstall": "yarn run build",
     "test": "jest --watch"
   },
@@ -22,7 +22,6 @@
     "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "esbuild": "^0.18.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -48,13 +47,12 @@
     "@types/mustache": "^4.2.2",
     "@types/redis": "^4.0.11",
     "@types/socket.io": "^3.0.2",
-    "@types/socket.io-redis": "^3.0.0",
     "@types/spotify-web-api-node": "^5.0.7",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "^5.60.0",
+    "esbuild": "^0.18.5",
     "eslint": "^8.43.0",
     "jest": "^29.5.0",
-    "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0"
   },
   "volta": {
