fixes type paths, sets ups redis in docker

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && esbuild ./src/server.ts --bundle --outdir=dist --target=es2022 --platform=node --sourcemap",
-    "build:dev": "rm -rf dist && esbuild ./src/server.ts --bundle --outdir=dist --target=es2022 --platform=node --watch",
-    "start": "node dist/server.js",
-    "start:docker": "yarn build && node --inspect=0.0.0.0 dist/server.js",
+    "build": "rm -rf dist && esbuild ./src/server.ts --bundle --target=es2022 --platform=node --sourcemap --outdir=dist",
+    "build:dev": "rm -rf dist && esbuild ./src/server.ts --bundle --sourcemap --target=es2022 --platform=node --outdir=dist",
+    "start": "node --enable-source-maps dist/server.js",
+    "start:docker": "yarn build && node --enable-source-maps --inspect=0.0.0.0 dist/server.js",
     "postinstall": "yarn run build",
     "test": "jest --watch"
   },
