--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 9229:9229 # debugger port
     volumes:
       - ./:/usr/src/app
-      - /usr/src/app/node_modules
+      # - /usr/src/app/node_modules
     command: yarn start:docker
     depends_on:
       - redis
