removes lodash, uses remeda

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "qs": "^6.11.2",
     "querystring": "^0.2.1",
     "redis": "^4.6.7",
+    "remeda": "^1.19.0",
     "socket.io": "^4.6.2",
     "socket.io-adapter": "^2.5.2",
     "spotify-web-api-node": "^5.0.2",
@@ -44,8 +45,6 @@
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.195",
     "@types/mustache": "^4.2.2",
-    "@types/redis": "^4.0.11",
-    "@types/socket.io": "^3.0.2",
     "@types/spotify-web-api-node": "^5.0.7",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "^5.60.0",
