default to esbuild cli

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && node build.js",
+    "build": "rm -rf dist && rm -rf dist && esbuild ./src/server.ts --bundle --target=es2022 --platform=node --sourcemap --outdir=dist",
+    "build:script": "rm -rf dist && node build.js",
     "start": "node --enable-source-maps dist/server.js",
     "start:docker": "yarn build && node --enable-source-maps --inspect=0.0.0.0 dist/server.js",
-    "postinstall": "yarn run build",
     "test": "jest --watch"
   },
   "engines": {
