--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "esbuild": "^0.18.5",
     "eslint": "^8.43.0",
     "jest": "^29.5.0",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.22",
     "ts-jest": "^29.1.0"
   },
