persists rooms, messages, users, reactions to redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       CLIENT_SECRET: "${CLIENT_SECRET}"
       REDIRECT_URI: http://localhost:3000/callback
       APP_URL: http://localhost:8000
+      SESSION_SECRET: "${SESSION_SECRET}"
   redis:
     image: redis:7.0.11-alpine
     ports:
