--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^8.2.1",
     "axios": "^1.4.0",
+    "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "mustache": "^4.2.0",
@@ -34,6 +36,7 @@
     "socket.io": "^4.6.2",
     "socket.io-adapter": "^2.5.2",
     "spotify-web-api-node": "^5.0.2",
+    "ts-extras": "^0.11.0",
     "typescript": "^5.1.3",
     "xstate": "^4.37.2"
   },
@@ -43,6 +46,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/eslint": "^8",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.195",
     "@types/mustache": "^4.2.2",
