--- a/compose.yml
+++ b/compose.yml
@@ -15,7 +15,7 @@ services:
       - redis
     environment:
       PORT: 3000
-      REDIS_URL: redis://redis:6379
+      REDIS_TLS_URL: redis://redis:6379
       SERVER_URL: "${SERVER_URL}"
       CLIENT_ID: "${CLIENT_ID}"
       CLIENT_SECRET: "${CLIENT_SECRET}"
